--- a/GitHub_Tutorial/README
+++ b/GitHub_Tutorial/README
@@ -1,4 +1,7 @@
 This respository is meant to be an introduction to getting set up with GitHub.
 
-Lots of information can be found at this site https://docs.github.com/en/get-started/quickstart/set-up-git 
-as well as the attached tutorials.
+There is a tutorial put together by Boise State students Jessica Taylor and Nora Honkomp https://github.com/JessicaTaylor55/Git_Tutorial
+And a second tutorial that further expands on the one above https://isdrfall23.classes.spaseslab.com/lesson/getting-setup.html
+There is a pdf version of the tutorial linked in this repository (Chapter_12.html)
+
+Lots of information can also be found at this site https://docs.github.com/en/get-started/quickstart/set-up-git.
