--- a/GitHub_Tutorial/README
+++ b/GitHub_Tutorial/README
@@ -1,7 +1,6 @@
-This respository is meant to be an introduction to getting set up with GitHub.
+This respository is meant to be an introduction to getting set up with GitHub. Please use these links to guide you.
 
-There is a tutorial put together by Boise State students Jessica Taylor and Nora Honkomp https://github.com/JessicaTaylor55/Git_Tutorial
-And a second tutorial that further expands on the one above https://isdrfall23.classes.spaseslab.com/lesson/getting-setup.html
-There is a pdf version of the tutorial linked in this repository (Chapter_12.html)
+Start with the tutorial put together by Boise State students Jessica Taylor and Nora Honkomp linked in this repository
+Continue with the expansion tutorial that further expands on the one above at this link https://isdrfall23.classes.spaseslab.com/lesson/getting-
 
-Lots of information can also be found at this site https://docs.github.com/en/get-started/quickstart/set-up-git.
+For additional information, this site is a very good resource https://docs.github.com/en/get-started/quickstart/set-up-git.
