--- a/GitHub_Tutorial/README
+++ b/GitHub_Tutorial/README
@@ -1,6 +1,7 @@
 This respository is meant to be an introduction to getting set up with GitHub. Please use these links to guide you.
 
-Start with the tutorial put together by Boise State students Jessica Taylor and Nora Honkomp linked in this repository
+Start with the tutorial put together by Boise State students Jessica Taylor and Nora Honkomp https://github.com/JessicaTaylor55/Git_Tutorial
+
 Continue with the expansion tutorial that further expands on the one above at this link https://isdrfall23.classes.spaseslab.com/lesson/getting-
 
 For additional information, this site is a very good resource https://docs.github.com/en/get-started/quickstart/set-up-git.
