--- a/GitHub_Tutorial/README
+++ b/GitHub_Tutorial/README
@@ -1,6 +1,7 @@
 This respository is meant to be an introduction to getting set up with GitHub. Please use these links to guide you.
 
-Start with the tutorial put together by Boise State students Jessica Taylor and Nora Honkomp https://github.com/JessicaTaylor55/Git_Tutorial
+Start with the tutorial put together by Boise State students Jessica Taylor and Nora Honkomp in the repository- GitHub_Tutorial.html 
+- You will need to download this file by clicking the down pointing arrow on the top right side of the document
 
 Continue with the expansion tutorial that further expands on the one above at this link https://isdrfall23.classes.spaseslab.com/lesson/getting-
 
